* Rename IdentificationSet's performQuery to queryIdentifyingStatements * In iterate() move the url from 'notDone' to 'done' before deleting it

BUG: 259723

svn path=/trunk/KDE/kdebase/runtime/; revision=1211769